force-app/main/default/objects/Asset__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <description>Item Assigned To</description>
    <formula>IF(ISBLANK( Employee__c ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>