force-app/main/default/objects/Asset__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Type Brand Name</description>
    <label>Brand</label>
    <length>40</length>
    <type>Text</type>
</CustomField>