force-app/main/default/objects/Asset__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>Item type for electronic.</description>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Charger</fullName>
            </value>
            <value>
                <fullName>Headphone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>