force-app/main/default/objects/Asset__c/fields/Project_Organization__c.field-meta.xml
<CustomField>
    <fullName>Project_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project/Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>