force-app/main/default/objects/Asset__c/fields/Sub_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Sub_Serial_Number__c</fullName>
    <label>Sub Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>